feat: log email
