# docs/swagger.json
@@ -2401,8 +2401,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by username",
-                        "name": "username",
+                        "description": "Filter by email",
+                        "name": "email",
                         "in": "query"
                     },
                     {
@@ -2443,7 +2443,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Sort by field (login_time, username, login_ip, status)",
+                        "description": "Sort by field (login_time, email, login_ip, status)",
                         "name": "sort_by",
                         "in": "query"
                     },
@@ -3868,6 +3868,9 @@
                 "device": {
                     "type": "string"
                 },
+                "email": {
+                    "type": "string"
+                },
                 "failure_reason": {
                     "type": "string"
                 },
@@ -3892,9 +3895,6 @@
                     "type": "string"
                 },
                 "user_agent": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
